--- a/frontend/src/styles/general/EntitesTree.css
+++ b/frontend/src/styles/general/EntitesTree.css
@@ -8,16 +8,6 @@ div.entities-tree div.last {
     margin-left: 10px;
 }
 
-div.entities-tree div.dragged {
-    border-radius: 3px;
-    border: 1px solid;
-    height: auto;
-    padding: 3px;
-    position: absolute;
-    width: auto;
-    z-index: 101;
-}
-
 div.entities-tree .position-divider {
     box-sizing: border-box;
     height: 3px;
