--- a/frontend/src/styles/general/Footer.css
+++ b/frontend/src/styles/general/Footer.css
@@ -7,7 +7,6 @@ footer {
     margin:0;
     position: absolute;
     width: 100%;
-    z-index: 100;
 }
 
 footer a {
