--- a/frontend/src/styles/general/Navigation.css
+++ b/frontend/src/styles/general/Navigation.css
@@ -29,7 +29,6 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 100;
 }
 
 .nav-links {
