--- a/frontend/src/styles/mobile/index.css
+++ b/frontend/src/styles/mobile/index.css
@@ -41,9 +41,11 @@
 }
 
 @media screen and (max-width: 600px){
+
     .entities-tree {
         width: 100%;
     }
+
     .sidebar {
         width:100%;
     }
@@ -58,6 +60,10 @@
         padding-left: 0;
     }
 
+    .book-cover.dragged {
+        width: 90%;
+    }
+
     .only-mobile {
         display: none;
     }
@@ -66,9 +72,8 @@
         width: 100%;
         left: -100%;
         padding: 0;
-        /* top: 45px; */
-        z-index: 80;
     }
+    
     .sidebar-container.open {
         left: 0;
     }
@@ -146,7 +151,6 @@
 
     .sidebar-container {
         top: 0;
-        z-index: 101;
     }
 
     .sidebar-container .sidebar {
